--- a/drona-landing-page/styles/css modules/services.module.css
+++ b/drona-landing-page/styles/css modules/services.module.css
@@ -55,7 +55,7 @@
 /* RESPONSIVE CODE FOR MOBILE */
 @media only screen and (max-width: 600px) {
     .heading {
-        font-size: 2rem;
+        font-size: 60px;
         padding-top: 25px;
     }
     .container {
