--- a/drona-landing-page/styles/css modules/test.module.css
+++ b/drona-landing-page/styles/css modules/test.module.css
@@ -47,7 +47,7 @@ font-size: 25px;
 /* RESPONSIVE CODE FOR MOBILE */
 @media only screen and (max-width: 600px) {
     .heading {
-        font-size: 2rem;
+        font-size: 60px;
         padding-top: 25px;
     }
     .carousel {
